# ATM

./: CMakeLists.txt  README.md
data/: accounts.db  transaction.db  transactions.db  users.db
src/: Auth.cpp  Auth.h  Bank.cpp  Bank.h  Storage.cpp  Storage.h  main.cpp
